--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -12,17 +12,7 @@
   top: 35px;
   left: 30px;
   height: 35px;
+  font-weight: bolder;
+  font-size: 1.5rem;
 }
 
-.privateBackground {
-  transform: rotate(-20deg);
-  width: 150vw;
-  height: 150vh;
-  font-weight: 500;
-  opacity: 0.3;
-  font-size: 14px;
-  pointer-events: none;
-  position: absolute;
-  font-size: 14px;
-  z-index: 0;
-}
